# WontonEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
EngineTest/: CMakeLists.txt  main.cpp
EngineTest/include/: CameraController.h  DeleteComponent.h  Floor.h  KMBox.h  KMScene.h  MainScene.h  MyCamera.h  Preload.h  Spin.h
EngineTest/shaders/: README  bwpost.frag  jiggly.vert  postproc.frag  postproc2.frag
WontonEngine/: AssetManagerBase.cpp  CMakeLists.txt  Camera.cpp  Component.cpp  ComponentManager.cpp  Defaults.cpp  ECManager.cpp  Entity.cpp  EntityManager.cpp  Error.cpp  FileManager.cpp  FrameBuffer.cpp  Game.cpp  Input.cpp  Light.cpp  Material.cpp  MaterialManager.cpp  Matrix.cpp  Mesh.cpp  MeshManager.cpp  Random.cpp  Renderer.cpp  Scene.cpp  ScreenRenderer.cpp  Shader.cpp  ShaderManager.cpp  Texture.cpp  TextureManager.cpp  ThreadPool.cpp  Time.cpp  Transform.cpp  UpdateLimiter.cpp  Vector.cpp  Window.cpp
WontonEngine/glad/include/glad/: glad.h
WontonEngine/glad/src/: glad.c
WontonEngine/include/: AssetManagerBase.h  Color.h  Component.h  Defaults.h  Entity.h  EntityCreator.h  FileManager.h  Game.h  Input.h  Scene.h  Time.h  Vertex.h  Window.h
WontonEngine/include/Components/: Camera.h  Renderer.h  Transform.h
WontonEngine/include/Math/: Matrix.h  Rect.h  Vector.h
WontonEngine/include/Rendering/: Material.h  MaterialManager.h  Mesh.h  MeshManager.h  ScreenRenderer.h  Shader.h  ShaderManager.h  Texture.h  TextureManager.h
WontonEngine/include/WontonEngine/: AssetManagerBase.h  Color.h  Component.h  ComponentArray.h  ComponentManager.h  Constants.h  Defaults.h  ECManager.h  Entity.h  EntityManager.h  Error.h  Game.h  IAssetManager.h  Input.h  ThreadPool.h  Time.h  UpdateLimiter.h  Vertex.h  Window.h
WontonEngine/include/WontonEngine/Components/: AllComponents.h  Camera.h  Light.h  Renderer.h  Transform.h
WontonEngine/include/WontonEngine/Math/: Crypto.h  Matrix.h  Random.h  Rect.h  Vector.h
WontonEngine/include/WontonEngine/Rendering/: FrameBuffer.h  Lighting.h  Material.h  Mesh.h  Renderable.h  ScreenRenderer.h  Shader.h  Texture.h
